Fix wrong color in ring label and change toggle overview button style

--- a/src/components/ProgressBars/ProgressBars.css
+++ b/src/components/ProgressBars/ProgressBars.css
@@ -33,8 +33,8 @@
     border: 3px solid #2e662e;
   }
 
-  .ring.grey {
-    border: 3px solid grey;
+  .ring.red {
+    border: 3px solid #F06E37;
   }
 
   .ring.yellow {
